syntax = "proto3";

package cocoa;
option go_package = "github.com/skeyic/ark-robot/app/rpc/cocoa";

service Waiter {
  rpc Hello (Req) returns (Res) {}
  rpc GetCurrentStockReport (Req) returns (Res) {}
}

message Req {
  string jsonStr = 1;
}

message Res {
  string backJson = 1;
}
